--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Sheikh Rezwan Rafid Ahmad - Portfolio</title>
+    <title>Shaikh Rezwan Rafid Ahmad - Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
