--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Sheikh Rezwan Rafid Ahmad - Portfolio" />
+    <meta name="description" content="Shaikh Rezwan Rafid Ahmad - Portfolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <meta name="author" content="Saif Newaz" />
+    <meta name="author" content="Shaikh Rezwan Rafid Ahmad" />
     <meta name="description" content="Sheikh Rezwan Rafid Ahmad - Portfolio" />
     <meta
       name="keywords"
-      content="sheikh, rezwan, rafid, ahmad, brac, developer, full,engineer, creative, portfolio"
+      content="shaikh, rezwan, rafid, ahmad, brac, developer, full,engineer, creative, portfolio, machinelearning, artificial, software"
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
